@@ -2,6 +2,9 @@ Revision history for perl distribution Convos
 
 6.52 Not Released
  - Fix not translating "" - the .po header
+ - Fix security issue for svg with Content-Disposition header
+   Contributor: KhanhCM
+   Reference: https://huntr.dev/bounties/66e7c30a-ce03-4272-aa87-62abb803ea80/
 
 6.51 2022-01-02T08:55:00+0900
  - Fix GET /api/files when there are no files
